RESOLVED FIXED267495
showRenderTree should not crash on damaged inline content
https://bugs.webkit.org/show_bug.cgi?id=267495
Summary showRenderTree should not crash on damaged inline content
alan
Reported 2024-01-13 05:40:18 PST
ssia
Attachments
[fast-cq]Patch (5.36 KB, patch)
2024-01-13 06:07 PST, alan
no flags
alan
Comment 1 2024-01-13 06:07:12 PST
Created attachment 469389 [details] [fast-cq]Patch
EWS
Comment 2 2024-01-13 09:05:26 PST
Committed 273010@main (19d6fe9d70b6): <https://commits.webkit.org/273010@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 469389 [details].
Radar WebKit Bug Importer
Comment 3 2024-01-13 09:06:13 PST
Note You need to log in before you can comment on or make changes to this bug.